// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown collapse button onClick renders expand button 1`] = `
<Fragment>
  <styled.ul>
    <li
      key="0"
    >
      hello.atlassian.net
    </li>
    <li
      key="1"
    >
      acme.atlassian.net
    </li>
    <li
      key="2"
    >
      test.atlassian.net
    </li>
  </styled.ul>
  <styled.div>
    <ForwardRef(WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button))))
      appearance="link"
      iconBefore={
        <ChevronDownIcon
          label="expand"
        />
      }
      onClick={[Function]}
      spacing="none"
    >
      <FormattedMessage
        defaultMessage="{num} more"
        description="Button text displaying number of available sites greater than 3 on expand"
        id="focused-task-close-account.delete-account.drop-down-expand-button"
        values={
          Object {
            "num": 1,
          }
        }
      />
    </ForwardRef(WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button))))>
  </styled.div>
</Fragment>
`;

exports[`Dropdown list button not display if accessibleSites < 3 1`] = `
<Fragment>
  <styled.ul>
    <li
      key="0"
    >
      hello.atlassian.net
    </li>
    <li
      key="1"
    >
      acme.atlassian.net
    </li>
    <li
      key="2"
    >
      test.atlassian.net
    </li>
  </styled.ul>
  <styled.div>
    <FormattedMessage
      defaultMessage="Other Atlassian services, such as Atlassian Community and Marketplace. "
      description="A paragraph explaining that upon deletion the user may also lose access to services that weren't listed prior."
      id="focused-task-close-account.delete-account.overview.paragraph.loseAccess.footnote"
      values={Object {}}
    />
  </styled.div>
</Fragment>
`;

exports[`Dropdown list displayed if accessibleSites > 3 1`] = `
<Fragment>
  <styled.ul>
    <li
      key="0"
    >
      hello.atlassian.net
    </li>
    <li
      key="1"
    >
      acme.atlassian.net
    </li>
    <li
      key="2"
    >
      test.atlassian.net
    </li>
  </styled.ul>
  <Fragment>
    <styled.ul>
      <li
        key="0"
      >
        bitflix.atlassian.net
      </li>
    </styled.ul>
    <styled.div>
      <FormattedMessage
        defaultMessage="Other Atlassian services, such as Atlassian Community and Marketplace. "
        description="A paragraph explaining that upon deletion the user may also lose access to services that weren't listed prior."
        id="focused-task-close-account.delete-account.overview.paragraph.loseAccess.footnote"
        values={Object {}}
      />
    </styled.div>
  </Fragment>
  <styled.div>
    <ForwardRef(WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button))))
      appearance="link"
      iconBefore={
        <ChevronUpIcon
          label="collapse"
        />
      }
      onClick={[Function]}
      spacing="none"
    >
      <FormattedMessage
        defaultMessage="Show less"
        description="Button text displaying text on collapse"
        id="focused-task-close-account.delete-account.drop-down-collapse-button"
        values={Object {}}
      />
    </ForwardRef(WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button))))>
  </styled.div>
</Fragment>
`;

exports[`list button display if accessibleSites > 3 1`] = `Object {}`;
